syntax = "proto3";

message Order {
    string _id = 1;
    string userId = 2;
    repeated string products = 3;
}

message Empty {}

message OrderList {
    repeated Order orders = 1;
}

message UserRequestId {
    string id = 1;
}

service OrderService {
    rpc createOrder(Order) returns (Order) {}
    rpc getOrderByUserId(UserRequestId) returns (Order) {}
    rpc getAllOrder(Empty) returns (OrderList) {}
}