syntax = "proto3";

message Product {
    string id = 1;
    string name = 2;
}

message ProductRequestId {
    string id = 1;
}

service ProductService {
    rpc getProductById(ProductRequestId) returns (Product) {}
}